2003-01-03  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/lowlevelcond.S
	(condvar_cleanup): Get condvar address from the right place.

	* atomic.h: Correct definitions of atomic_full_barrier,
	atomic_read_barrier, atomic_write_barrier.

	* old_pthread_cond_broadcast.c: Make memory allocate and initialization
	race-free.
	* old_pthread_cond_signal.c: Likewise.
	* old_pthread_cond_timedwait.c: Likewise.
	* old_pthread_cond_wait.c: Likewise.

2003-01-03  Jakub Jelinek  <jakub@redhat.com>

	* Makefile ($(objpfx)libpthread.so): Depend on ld.so.

2003-01-03  Ulrich Drepper  <drepper@redhat.com>

	* pthreadP.h (pthread_cond_2_0_t): New type.
	(struct pthread_functions): Use new type for 2.0 condvar callbacks.
	Use new type for the 2.0 condvar function prototypes.
	* forward.c: Use pthread_cond_2_0_t for 2.0 condvar functions.
	* old_pthread_cond_init.c: Use pthread_cond_2_0_t for condvar
	parameter.
	* old_pthread_cond_destroy.c: Likewise.
	* old_pthread_cond_broadcast.c: Likewise.  Lock appropriately.
	* old_pthread_cond_signal.c: Likewise.
	* old_pthread_cond_timedwait.c: Likewise.
	* old_pthread_cond_wait.c: Likewise.

	* sysdeps/unix/sysv/linux/i386/i486/lowlevelcond.S
	(__pthread_cond_wait): Don't save cancellation mode and seq value
	in same location.

	* herrno.c (__h_errno_location): Don't define as weak.

2003-01-02  Jakub Jelinek  <jakub@redhat.com>

	* Versions [libc] (GLIBC_2.3.2): Export pthread_cond_broadcast,
	pthread_cond_destroy, pthread_cond_init, pthread_cond_signal
	and pthread_cond_wait.
	* old_pthread_cond_broadcast.c (__old_pthread_cond_broadcast):
	Renamed to...
	(__pthread_cond_broadcast_2_0): ... this.
	* old_pthread_cond_destroy.c (__old_pthread_cond_destroy):
	Renamed to...
	(__pthread_cond_destroy_2_0): ... this.
	* old_pthread_cond_init.c (__old_pthread_cond_init):
	Renamed to...
	(__pthread_cond_init_2_0): ... this.
	* old_pthread_cond_signal.c (__old_pthread_cond_signal):
	Renamed to...